--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue": "^3.3.4",
     "vue-i18n": "9",
     "vue-router": "^4.2.4",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-carousel": "^0.3.1",
+    "vue3-marquee": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
